static/client/pages/views/_Owned.scss
.l-owned {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1; 
  height: 100%; 
  min-height: 0;

  td {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
  }

  /* Table Container */
  & > div:first-child {
    flex: 1;
    overflow-y: auto;
    min-height: 0;
    padding-bottom: 1rem;
  }

  &__pagination {
    margin-top: auto;
    flex-shrink: 0;
    padding-bottom: 0;

    .pagination {
      margin-bottom: 0;
    }
  }

  &__project-button {
    background: none;
    border: none;
    cursor: pointer;
    display: block;
    padding: $sp-x-small $sp-large $sp-x-small $sp-medium;
    text-align: left;
    width: 100%;

    &.is-active {
      border-left: 3px solid #000;
      font-weight: 400;
      background-color: var(--color-x-light);
      background-color: $color-x-light;
    }
  }

  &__status {
    display: inline-flex;
    align-items: center;
    gap: 8px;
  }

  &__actions {
    button {
      background: none;
      border: none !important;
      box-shadow: none !important;
      cursor: pointer;
      padding: 0;
      margin-bottom: 0;
    }
  }

  &__cell {
    &--wrap-anywhere {
      word-break: break-all;
    }

    &--truncate {
      max-width: 0;
      white-space: nowrap;
    }
  }
}

